--- a/client/src/App.css
+++ b/client/src/App.css
@@ -83,3 +83,11 @@ label {
    right: 10px;
    display:  inline;
 }
+
+.proposalItem {
+   border: 1px solid black;
+   display: inline-block;
+   width: 30vw;
+   height: 25vh;
+   overflow: scroll;
+}
