--- a/client/src/App.css
+++ b/client/src/App.css
@@ -87,6 +87,7 @@ label {
 .proposalItem {
    border: 1px solid black;
    display: inline-block;
+   margin: 1vw 1vw;
    width: 30vw;
    height: 25vh;
    overflow: scroll;
