--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,11 +1,19 @@
-
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
+}
 
 /*=============================*/
 
 /*STYLING*/
 
 /*Home Page*/
-
+/*for laptops and bigger screens*/
+@media (min-width: 800px) {
 .smMargin {
   margin: 10px;
 }
@@ -80,16 +88,24 @@ label {
   color: #424242 ;
 }
 
+
+div.container.propMain{
+   /*margin-right: 0;
+   margin-left: 8vw;*/
+   width: 90vw;
+}
 .componentTitle {
    font-size:3em;
    display: inline-block;
-   margin-right: 30vw;
+   margin-right: 24vw;
+   margin-left: 15vw;
 }
 
 #newBtn {
    float: right;
    right: 0;
    display:  inline-block;
+   color: black
 }
 
 .proposalsRow{
@@ -100,12 +116,12 @@ label {
 .proposalItem {
    display: inline-block;
    margin: 1vw 1vw;
-   width: 36vw;
+   width: 42vw;
 }
 
 .proposalsCard {
-   min-height: 54vh;
-   /*max-height: 54vh;*/
+   min-height: 30vh;
+   max-height: 54vh;
 }
 
 #upvote, #voteCount {
@@ -116,6 +132,15 @@ label {
 .proposalSummary {
    height: 25vh;
    /*overflow: scroll*/
+}
+
+#filter{
+   margin-right: 9vw;
+   width: 27vw;
+}
+
+.row .col.s3{
+   margin-left: 4vw;
 }
 
 /* Survey CSS */
@@ -163,4 +188,153 @@ transform: scale(.5); }
   text-align: center; /* To center it horizontally (if you want) */
   line-height: 30px; /* To center it vertically */
   color: white;
+}
+
+}
+
+/*for Iphones portrait*/
+
+@media (max-width: 450px) {
+   div.container.propMain{
+      width: 80vw;;
+   }
+
+   div.row{
+      width: 90%;
+   }
+   .componentTitle {
+      font-size:36px;
+      display: block;
+      margin-top: 5px;
+      text-align: center;
+      /*margin-right: 10vw;
+      margin-left: 10vw;*/
+   }
+
+   .newBtn {
+      display: block;
+      text-align: center;
+      /*margin-left: 20vw;*/
+      margin: auto;
+      margin-top: 15px;
+      margin-bottom: -18px;
+      font-size: 14px;
+   }
+
+   .proposalsRow{
+      margin-left: 5vw;
+      margin-right: 5vw;
+   }
+
+   .proposalItem {
+      display: inline-block;
+      width: 92vw;
+   }
+
+   .proposalsCard {
+      min-height: 20vh;
+      max-height: 110vh;
+   }
+   div.proposalItem.container{
+      margin-left: 9px;
+   }
+
+   .card .card-title{
+      font-size: 20px;
+      line-height: 10px;
+   }
+
+   #upvote, #voteCount {
+      display: inline-block;
+      margin-right: 1em;
+   }
+
+   .proposalSummary {
+      min-height: 15vh;
+      max-height: 70vh;
+      /*overflow: scroll*/
+   }
+
+   #filter{
+      width: 60vw;
+      display: block;
+   }
+
+   div.col.input-field.s3{
+      width: 80%;
+      display: block;
+      text-align: center;
+   }
+}
+
+/*for Iphones landscape*/
+
+@media (max-width: 800px) {
+   div.container.propMain{
+      width: 80vw;;
+   }
+
+   div.row{
+      width: 90%;
+   }
+   .componentTitle {
+      font-size:36px;
+      display: block;
+      margin-top: 5px;
+      text-align: center;
+      /*margin-right: 10vw;
+      margin-left: 10vw;*/
+   }
+
+   .newBtn {
+      display: block;
+      text-align: center;
+      /*margin-left: 20vw;*/
+      margin: auto;
+      margin-top: 15px;
+      margin-bottom: -18px;
+      font-size: 14px;
+   }
+
+   .proposalsRow{
+      margin-left: 5vw;
+      margin-right: 5vw;
+   }
+
+   .proposalItem {
+      display: inline-block;
+      width: 92%;
+   }
+
+   .proposalsCard {
+      min-height: 20vh;
+      max-height: 110vh;
+   }
+
+   .card .card-title{
+      font-size: 20px;
+      line-height: 10px;
+   }
+
+   #upvote, #voteCount {
+      display: inline-block;
+      margin-right: 1em;
+   }
+
+   .proposalSummary {
+      min-height: 15vh;
+      max-height: 70vh;
+      /*overflow: scroll*/
+   }
+
+   #filter{
+      width: 60vw;
+      display: block;
+   }
+
+   div.col.input-field.s3{
+      width: 80%;
+      display: block;
+      text-align: center;
+   }
 }
