--- a/client/src/App.css
+++ b/client/src/App.css
@@ -11,9 +11,15 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 
 /*STYLING*/
 
+html, body {
+    background-image: url('./images/crossword.png');
+}
+
 /*Home Page*/
 /*for laptops and bigger screens*/
 @media (min-width: 800px) {
+
+
 .smMargin {
   margin: 10px;
 }
@@ -127,14 +133,15 @@ div.row.sortFilter{
 
 .proposalsCard {
    min-height: 30vh;
-   max-height: 50vh;
+   max-height: 55vh;
 }
 .modalCardTitle{
    font-size: 18px;
    line-height: 24px;
    /*text-decoration: underline;*/
    min-height: 44px;
-   color:#0074ac;
+   color:#0277bd;
+   /*background-color: black;*/
 }
 
 #upvote, #voteCount {
@@ -379,6 +386,7 @@ transform: scale(.5); }
       line-height: 24px;
       font-weight: 500;
       /*text-decoration: underline;*/
+
       color:#0074ac;
 
    }
