--- a/client/src/App.css
+++ b/client/src/App.css
@@ -390,6 +390,17 @@ transform: scale(.5); }
       display: block;
       text-align: center;
    }
+   .container.survey{
+     background-color: rgba(136, 136, 136, 0.08);
+     border: 2px solid rgba(136, 136, 136, 0.41);
+     border-radius: 5px;
+     width:75%;
+     padding:3%;
+     padding-bottom:10vh;
+     margin-top: 5vh;
+     margin-bottom: 5vh;
+   }
+
 }
 
 /*for Iphones landscape*/
@@ -536,21 +547,23 @@ transform: scale(.5); }
   border-radius: 5px;
   width:75%;
   padding:3%;
-  padding-bottom:8%;
+  padding-bottom:15vh;
   margin-top: 5vh;
+  margin-bottom: 5vh;
 }
 
 .nextBtn{
    display: block;
+   margin-bottom: 4vh;
 }
 
 h3.center{
    font-size: 33px;
 }
 
-.selectDisorder{
+.container .row.selectDisorder{
    margin-bottom: -25px;
-   margin-left: 20px;
+   margin-left: 25px;
 }
 
 #otherLable{
