--- a/client/src/App.css
+++ b/client/src/App.css
@@ -524,7 +524,7 @@ transform: scale(.5); }
 
 /* Survey CSS */
 input[type="radio"]:checked+label:after, input[type="radio"].with-gap:checked+label:before, input[type="radio"].with-gap:checked+label:after{
-  border: 2px solid #4dd0e1;
+  border: 2px solid #0277bd;
 }
 
 [type="radio"].with-gap:checked + label:after {
