--- a/client/src/App.css
+++ b/client/src/App.css
@@ -47,14 +47,73 @@ p, div{
 .dropdown-content li>a, .dropdown-content li>span {
    color: #0074ac;
 }
+
+.logo {
+  display: inline-block;
+  float: left
+}
+
+.smMargin {
+  margin: 10px;
+}
+
+/*Home Page*/
+.font1 {
+  font-family: 'Montserrat', sans-serif;
+}
+
+.lgText{
+  font-size: 1.1em;
+}
+
+.logo {
+  color: #424242 ;
+  font-size: 28px;
+  font-weight: 700;
+  letter-spacing: 0.1em;
+}
+
+
+.nav-wrapper {
+  width: 100%;
+}
+/*.homeNavInput {
+padding: 8px;*/
+/*overflow: hidden;*/
+/*margin: 10px;*/
+/*border: 2px solid black;
+}
+
+.homeNavBtn {
+ border: 2px solid black;
+}*/
+
+/*Change placeholder color*/
+::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+  color:#7f7f7f ;
+}
+::-moz-placeholder { /* Firefox 19+ */
+  color: #7f7f7f ;
+}
+:-ms-input-placeholder { /* IE 10+ */
+  color: #7f7f7f ;
+}
+:-moz-placeholder { /* Firefox 18- */
+  color: #7f7f7f ;
+}
+
+label {
+  color: #9e9e9e ;
+}
+
+
 /*Home Page*/
 /*for laptops and bigger screens*/
 @media (min-width: 800px) {
 
 
-.smMargin {
-  margin: 10px;
-}
+
+
 
 .material-icons {
   margin: auto;
@@ -92,39 +151,6 @@ p, div{
 /*TYPOGRAPHY*/
 
 
-/*Home Page*/
-.font1 {
-  font-family: 'Montserrat', sans-serif;
-}
-
-.lgText{
-  font-size: 1.1em;
-}
-
-.logo {
-  color: #424242 ;
-  font-size: 32px;
-  font-weight: 700;
-  letter-spacing: 0.3em;
-}
-
-/*Change placeholder color*/
-::-webkit-input-placeholder { /* Chrome/Opera/Safari */
-  color: #424242 ;
-}
-::-moz-placeholder { /* Firefox 19+ */
-  color: #424242 ;
-}
-:-ms-input-placeholder { /* IE 10+ */
-  color: #424242 ;
-}
-:-moz-placeholder { /* Firefox 18- */
-  color: #424242 ;
-}
-
-label {
-  color: #424242 ;
-}
 
 
 div.container.propMain{
@@ -301,6 +327,8 @@ transform: scale(.5); }
 /*for Iphones portrait*/
 
 @media (max-width: 450px) {
+
+
    div.container.propMain{
       width: 80vw;;
    }
