--- a/client/src/App.css
+++ b/client/src/App.css
@@ -65,6 +65,39 @@ p, div{
 
 /*HomeForm Elements*/
 
+
+/*OVERRIDING MATERIALIZE ON HOME PAGE=============*/
+
+
+/* label focus color */
+  .input-field input[type=text]:focus + label {
+    color: rgba(2, 136,	209, 0.6) !important;
+  }
+
+
+
+ .input-field input:focus {
+   border-bottom: 1px solid rgba(2, 136,	209, 0.6) !important;
+   box-shadow: 0 1px 0 0 rgba(2, 136,	209, 0.6) !important
+ }
+
+.btn, .btn-large, .btn:clicked, .btn-large:visited {
+  background-color: none;
+}
+
+.waves-effect, .waves-effect:focus, .waves-effect:active {
+  background-color: rgba(255,255,255, 0.8);
+}
+
+ .waves-effect:visited {
+  background-color: rgba(230,255,255, 0.8)
+}
+
+.waves-effect:hover {
+  background-color: rgba(255,255,255, 0.6) ;
+}
+/*================================*/
+
 .lgHomeContainer {
   margin: 20px;
 }
@@ -114,18 +147,6 @@ p, div{
   height: 40px;
 }
 
-/*.collapsible-header{
-  min-height: 0;
-  line-height: 30px;
-}*/
-
-/*.btn:focus .btn:active .btn-lrg:focus {
-  background-color: none;
-}
-
-.waves-teal {
-  background-color: none;
-}*/
 
 .adminRef {
   flex: 1;
@@ -133,7 +154,7 @@ p, div{
   width: 30px;
   text-align: center;
   background-color: rgba(255,255,255, 0.9);
-  color: rgba(2,	136,	209, 0.6	);
+  color: rgba(2, 136,	209, 0.6);
 
 }
 
@@ -188,7 +209,7 @@ p, div{
   letter-spacing: 0.1em;
 }
 
-/*Change placeholder color*/
+/*Change placeholder color=======================*/
 ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
   text-align: center;
   color:#7f7f7f ;
@@ -205,6 +226,7 @@ p, div{
   text-align: center;
   color: #7f7f7f ;
 }
+/*======================================*/
 
 label {
   color: #9e9e9e ;
