--- a/client/src/App.css
+++ b/client/src/App.css
@@ -182,7 +182,7 @@ p, div{
 }
 
 .logo {
-  color: #424242 ;
+  color: #fff ;
   font-size: 28px;
   font-weight: 700;
   letter-spacing: 0.1em;
@@ -811,4 +811,22 @@ h3.center{
 }
 #done{
   padding-top:95px;
+}
+
+.card.horizontal{
+  background-color:transparent;
+  border:none;
+  border-radius:none;
+}
+
+#heyhey{
+  border:none;
+  box-shadow: none;
+}
+
+h5.subtitle{
+  font-size:30px;
+}
+h3.innervate{
+  font-size:35px;
 }
