--- a/client/src/App.css
+++ b/client/src/App.css
@@ -163,10 +163,22 @@ p, div{
   div.card-content{
      display: block;
  }
+ .newBtnMy{
+    display: inline-block;
+    margin-top: -100px;
+
+}
+
+.newBtn{
+   display: inline-block;
+   margin-top: -100px;
+
+}
+
 }
 
 /*Hide main info and forms when below 850px*/
-@media (max-width: 850px){
+@media (max-width: 800px){
   .homeFormContainer {
     display: none;
   }
@@ -174,6 +186,16 @@ p, div{
   .homeInfoContainer {
     display: none;
   }
+   .newBtnMy{
+      display: block;
+      margin-top: 21px;
+   }
+
+   .newBtn{
+         display: block;
+         margin-top: 21px;
+      }
+
 }
 
 
