--- a/client/src/App.css
+++ b/client/src/App.css
@@ -232,6 +232,11 @@ label {
   color: #9e9e9e ;
 }
 
+.voteTitle {
+   margin-bottom: 5px;
+   text-decoration: underline;
+}
+
 /*hamburger menu disappear*/
 @media only screen and (min-width: 601px){
    nav i, nav [class^="mdi-"], nav [class*="mdi-"], nav i.material-icons {
@@ -339,7 +344,7 @@ div.container.propMain{
 
 .proposalsCard {
    min-height: 30vh;
-   max-height: 65vh;
+   max-height: 70vh;
 }
 .modalCardTitle{
    font-size: 18px;
@@ -403,7 +408,7 @@ h4{
 }
 
 .roleVote {
-   flex: 1 1 auto;;
+   width: 30%;
    margin: 3px 5px;
    /*box-sizing: border-box;*/
 }
