--- a/client/src/App.css
+++ b/client/src/App.css
@@ -844,10 +844,10 @@ h3.center {
       padding-top: 95px;
   }
 }
-@media (min-width: 450px){
+@media (min-width: 450px) and (max-width:800px){
   .container.wizard1 {
       font-family: "Montserrat", sans-serif;
-      width: 100%;
+      width: 85%;
       border-left: 1px solid rgb(212, 212, 212);
       border-right: 1px solid rgb(212, 212, 212);
       background-color: white;
@@ -857,7 +857,7 @@ h3.center {
 
   .container.wizard2 {
       font-family: "Montserrat", sans-serif;
-      width: 100%;
+      width: 85%;
       border-left: 1px solid rgb(212, 212, 212);
       border-right: 1px solid rgb(212, 212, 212);
       background-color: white;
@@ -867,7 +867,7 @@ h3.center {
 
   .container.wizard3 {
       font-family: "Montserrat", sans-serif;
-      width: 100%;
+      width: 85%;
       border-left: 1px solid rgb(212, 212, 212);
       border-right: 1px solid rgb(212, 212, 212);
       background-color: white;
@@ -891,54 +891,7 @@ h3.center {
   }
 
 }
-@media (max-width: 800px){
-  .container.wizard1 {
-      font-family: "Montserrat", sans-serif;
-      width: 45%;
-      border-left: 1px solid rgb(212, 212, 212);
-      border-right: 1px solid rgb(212, 212, 212);
-      background-color: white;
-      padding-left: 1%;
-      padding-right: 1%;
-  }
-
-  .container.wizard2 {
-      font-family: "Montserrat", sans-serif;
-      width: 45%;
-      border-left: 1px solid rgb(212, 212, 212);
-      border-right: 1px solid rgb(212, 212, 212);
-      background-color: white;
-      padding-left: 3%;
-      padding-right: 3%;
-  }
-
-  .container.wizard3 {
-      font-family: "Montserrat", sans-serif;
-      width: 45%;
-      border-left: 1px solid rgb(212, 212, 212);
-      border-right: 1px solid rgb(212, 212, 212);
-      background-color: white;
-      padding-left: 3%;
-      padding-right: 3%;
-      padding-bottom: 8%;
-      height: 100vh;
-  }
-
-  #gstarted {
-      font-size: 40px;
-  }
-
-  #congrats {
-      padding-top: 100px;
-      font-size: 40px;
-  }
-
-  #done {
-      padding-top: 95px;
-  }
-
-}
-@media (max-width: 800px){
+@media (min-width: 800px){
   .container.wizard1 {
       font-family: "Montserrat", sans-serif;
       width: 45%;
