wizard2 and wizard3 styling changes

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -887,7 +887,7 @@ h3.center {
   }
 
   #done {
-      padding-top: 95px;
+      padding-top: 125px;
   }
 
 }
@@ -934,7 +934,7 @@ h3.center {
   }
 
   #done {
-      padding-top: 95px;
+    margin-top: 125px;
   }
 
 }
