--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,4 @@
-html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, output, ruby, section, summary, time, mark, audio, video {
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form,  legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, output, ruby, section, summary, time, mark, audio, video {
     margin: 0;
     padding: 0;
     border: 0;
@@ -60,6 +60,41 @@ p, div {
 
 
 /*Home Page*/
+
+
+/*OVERRIDING MATERIALIZE ON HOME PAGE=============*/
+
+.homeNav input + label {
+  color: rgba(255, 255, 255, 0.8);
+}
+
+/* label focus color */
+
+  .input-field input[type=text]:focus + label {
+    color: rgba(2, 136,	209, 0.6) !important;
+  }
+
+ .input-field input:focus {
+   border-bottom: 1px solid rgba(2, 136,	209, 0.6) !important;
+   box-shadow: 0 1px 0 0 rgba(2, 136,	209, 0.6) !important
+ }
+
+.btn, .btn-large, .btn:clicked, .btn-large:visited {
+  background-color: none;
+}
+
+.waves-effect, .waves-effect:focus, .waves-effect:active {
+  background-color: rgba(255,255,255, 0.8);
+}
+
+ .waves-effect:visited {
+  background-color: rgba(230,255,255, 0.8)
+}
+
+.waves-effect:hover {
+  background-color: rgba(255,255,255, 0.6) ;
+}
+/*================================*/
 
 .font1 {
     font-family: 'Montserrat', sans-serif;
@@ -233,10 +268,25 @@ p, div {
     color: #7f7f7f;
 }
 
-:-moz-placeholder {
-    /* Firefox 18- */
-    text-align: center;
-    color: #7f7f7f;
+
+/*Change placeholder color*/
+
+
+::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+  text-align: center;
+  color:#7f7f7f ;
+}
+::-moz-placeholder { /* Firefox 19+ */
+  text-align: center;
+  color: #7f7f7f ;
+}
+:-ms-input-placeholder { /* IE 10+ */
+  text-align: center;
+  color: #7f7f7f ;
+}
+:-moz-placeholder { /* Firefox 18- */
+  text-align: center;
+  color: #7f7f7f ;
 }
 
 label {
